mido: overlay: Add overlays to inflate signal strength
Change-Id: I92352b80c705be66d9b14d00d657c7348e17fcfb
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -392,4 +392,7 @@
     <!-- Maximum number of supported users -->
     <bool name="config_enableMultiUserUI">true</bool>
     <integer name="config_multiuserMaximumUsers">5</integer>
+
+    <!-- Whether to artificially interpret all signal strengths as one bar higher than they actually are -->
+    <bool name="config_inflateSignalStrength">true</bool>
 </resources>
