sweet: overlay: Enable Wired/BT headset focus mode
Change-Id: I506e59e46d1b3d15f76f86d58a2d1c61b012ef6a
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -385,4 +385,7 @@
 
     <!-- Allow automatic adjusting of the screen brightness while dozing in low power state. -->
     <bool name="config_allowAutoBrightnesswhiledozing">true</bool>
+
+    <!-- Wired/BT headset focus mode -->
+    <bool name="config_deviceRingtoneFocusMode">true</bool>
 </resources>
