sweet: overlay: limit screen recorder's framerate to 60fps
At 120 playback of the recording is laggy in google photos, and when
paused in landscape youtube player it causes a SystemUI crash.

Signed-off-by: Kuba Wojciechowski <nullbytepl@gmail.com>
Change-Id: I1b918f2d8206c5b6d58760aa11425dfa9ae77d13
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -530,4 +530,7 @@
     <!-- True if the display hardware only has brightness buckets rather than a full range of
          backlight values -->
     <bool name="config_displayBrightnessBucketsInDoze">true</bool>
+
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">60</integer>
 </resources>
