--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -32,4 +32,7 @@
 
     <!-- Whether to show min refresh rate in display settings -->
     <bool name="config_show_min_refresh_rate_switch">true</bool>
+
+    <!-- Whether device supports dynamic refresh rate control -->
+    <bool name="config_supports_dynamic_refresh_rate_controls">false</bool>
 </resources>
