--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -461,4 +461,7 @@
 
     <!-- Whether the device supports smart pixels -->
     <bool name="config_enableSmartPixels">true</bool>
+
+    <!-- Allow automatic adjusting of the screen brightness while dozing in low power state. -->
+    <bool name="config_allowAutoBrightnesswhiledozing">true</bool>
 </resources>
