--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -111,6 +111,12 @@
          and one pSIM) -->
      <integer name="config_num_physical_slots">2</integer>
 
+    <!-- The default peak refresh rate for a given device. Change this value if you want to prevent
+        the framework from using higher refresh rates, even if display modes with higher refresh
+        rates are available from hardware composer. Only has an effect if the value is
+        non-zero. -->
+    <integer name="config_defaultPeakRefreshRate">120</integer>
+
     <!-- List supported color modes. -->
     <integer-array name="config_availableColorModes">
         <item>0</item> <!-- COLOR_MODE_NATURAL -->
